tests/checker/bad/constraint_type_illegal.scilla
scilla_version 0

library Constraint

let x = Uint128 0

contract Constraint()
with
  x
=>
